# ASTRO

./: .gitignore  Animation.h  Application.cpp  Application.h  CMakeLists.txt  Enemy_BrownShip.cpp  Enemy_BrownShip.h  Enemy_Mech.cpp  Enemy_Mech.h  Enemy_RedBird.cpp  Globals.cpp  Globals.h  Main.cpp  MemLeaks.h  ModuleAudio.cpp  ModuleAudio.h  ModuleFadeToBlack.cpp  ModuleFadeToBlack.h  ModuleFonts.cpp  ModuleFonts.h  ModuleInput.cpp  ModuleInput.h  ModuleParticles.cpp  ModulePlayer.cpp  ModulePlayer.h  ModuleRender.cpp  ModuleRender.h  ModuleSceneIntro.cpp  ModuleSceneSpace.cpp  ModuleSceneSpace.h  ModuleTextures.cpp  ModuleWindow.cpp  ModuleWindow.h  README.md  SDL Game.vcxproj  SDL Game.vcxproj.filters
Docs/: README.md
docs/: README.md
osx/: create_build.sh
osx/ASTRO.app/Contents/: Info.plist
osx/cmake/: FindSDL2.cmake
